<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Estilo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="formulario">Formulário</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="email">Email</string>
    <string name="cidade">Cidade</string>
    <string name="formulario_2">Formulário 2</string>
    <string name="estilizado">Estilizado</string>

</resources>